syntax = "proto3";

message WiredActionShowMessageData {
    string message = 1;
    uint32 delay_in_seconds = 2;
}
